# Shiny

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/Advanced/: Advanced.cpp  Main.cpp  Shared.h
examples/MainLoop/: MainLoop.cpp
examples/Simple/: Simple.cpp
examples/example-01-trivial/: CMakeLists.txt  example-01.cpp
examples/old-examples/Advanced/: Advanced.cpp  CMakeLists.txt  Main.cpp
examples/old-examples/MainLoop/: CMakeLists.txt  MainLoop.cpp
examples/old-examples/Simple/: CMakeLists.txt  Simple.cpp
examples/sleep-milliseconds/: sleepMilliseconds.cpp  sleepMilliseconds.h
include/: Shiny.h  ShinyCommons.h  ShinyConfig.h  ShinyData.h  ShinyMacros.h  ShinyManager.h  ShinyNode.h  ShinyNodePool.h  ShinyNodeState.h  ShinyOutput.h  ShinyPrereqs.h  ShinyStructForwardDeclarations.h  ShinyTools.h  ShinyVersion.h  ShinyZone.h
include/config/: config.h  config_cmake.h.in  config_define.h  config_function.h  config_header.h  config_knobs.h  config_version.h
lib/config/: config_cmake.h.in
src/: ShinyManager.c  ShinyNode.c  ShinyNodePool.c  ShinyNodeState.c  ShinyOutput.c  ShinyTools.c  ShinyZone.c
trunk/Shiny/include/: ShinyData.h
